test/scripted/compilation/errors/module_not_found.bnj
# test:error 3:5 "cannot find module 'some_module'"

use some_module;
